[workspace]
resolver = "3"

members = [
    "crates/rust-eigenda-client",
    "crates/rust-eigenda-client-v2",
]

[workspace.package]
authors = ["Layr Labs"]
description = "EigenDA Client for Rust"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
license = "MIT OR Apache-2.0"
edition = "2024"


[workspace.dependencies]
tokio = {version = "1", features = ["fs"]}
tokio-stream = "0.1.16"
rust-kzg-bn254 = "0.2.1"
ark-bn254 = "0.5.0"
ethereum-types = { version = "0.14.1", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tonic = { version = "0.11.0", features = ["tls-roots", "prost", "codegen"] }
async-trait = "0.1"
hex = "0.4"
secrecy = "0.8.0"
byteorder = "1.5.0"
url = "2.5.2"
tempfile = "3.0.2"
hex-literal = "0.3"
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"] }
bytes = {version= "1", features = ["serde"]}
reqwest = {version = "0.12", features = ["json"] }
prost = "0.12.6"
num-bigint = "0.4.6"
rand = "0.8"
sha3 = "0.10.8"
tiny-keccak = "2"
ethabi = "18.0.0"