[workspace]
resolver = "2"

members = [
    "crates/rust-eigenda-client",
    "crates/rust-eigenda-v2-client",
]

[workspace.package]
authors = ["Layr Labs"]
description = "EigenDA Clients"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
license = "MIT OR Apache-2.0"
edition = "2021"


[workspace.dependencies]
tokio = {version = "1", features = ["fs"]}
tokio-stream = "0.1.16"
rust-kzg-bn254 = "0.2.1"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ethereum-types = { version = "0.14.1", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tonic = { version = "0.11.0", features = ["tls-roots", "prost", "codegen"] }
async-trait = "0.1"
hex = "0.4"
secrecy = "0.8.0"
byteorder = "1.5.0"
url = "2.5.2"
tempfile = "3.0.2"
hex-literal = "0.3"
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"] }
bytes = {version= "1", features = ["serde"]}
reqwest = {version = "0.12", features = ["json"] }
prost = "0.12.6"
num-bigint = "0.4.6"
rand = "0.8"
sha2 = "0.10.8"
sha3 = "0.10.8"
tiny-keccak = "2"
ethabi = "18.0.0"
rust-kzg-bn254-primitives = "0.1.0"
rust-kzg-bn254-verifier = "0.1.0"
proptest = "1.4"
alloy-primitives = "1.0.0"
dotenv = "0.15.0"
serial_test = "3.1.1"
