[package]
name = "e2e_tests"
version = "0.1.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rust-eigenda-client = { path = "../crates/rust-eigenda-client" } # Ensure aws-signer feature is enabled
testcontainers = { version = "0.20", default-features = false, features = [
  "watchdog",
] }
rust-eigenda-signers = { path = "../crates/rust-eigenda-signers/" }
tokio = { version = "1.37", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
  "io-util",
  "time",            # Added for sleep/timeout
] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
aws-config = { version = "1.5.5", features = ["rustls"] }
aws-sdk-kms = { version = "1.36", features = ["rustls"] }
secp256k1 = { version = "0.27.0", features = ["recovery", "rand-std"] }
rand = "0.8.5"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
async-trait = "0.1.74"
base64 = "0.21.0"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

# New dependencies for AWS signer test
aws-sdk-secretsmanager = { version = "1.36", features = [
  "rustls",
] } # For AwsSigner
url = "2.5.0" # For RPC URLs
ethereum-types = "0.14.1" # For H160 address
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
] } # Added fmt feature
