[package]
# This is named with the rust- prefix to match https://github.com/Layr-Labs/rust-kzg-bn254
# We will remove the prefix and publish as new crates once we combine all of these repos
# and move them into the eigenda monorepo.
name = "rust-eigenda-client-v2"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
description = "EigenDA Client"
license = "MIT OR Apache-2.0"
exclude = [
    # Excluded because g1.point is 32MiB and max crates.io package size is 10MiB.
    # Users should download the SRS points themselves from the repo or elsewhere.
    "../../resources/*",
]

[dependencies]
bytes = { workspace = true}
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
byteorder = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
hex-literal = { workspace = true }
ethabi = { workspace = true }
thiserror = { workspace = true }
ethereum-types = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
rust-kzg-bn254-primitives = "0.1.0"
rust-kzg-bn254-verifier = "0.1.0"
