[package]
# This is named with the rust- prefix to match https://github.com/Layr-Labs/rust-kzg-bn254
# We will remove the prefix and publish as new crates once we combine all of these repos
# and move them into the eigenda monorepo.
name = "rust-eigenda-client"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
description = "EigenDA Client"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [
  # Excluded because g1.point is 32MiB and max crates.io package size is 10MiB.
  # Users should download the SRS points themselves from the repo or elsewhere.
  "../../resources/*",
]

[dependencies]
rust-eigenda-signers = { workspace = true }
tokio-stream = { workspace = true }
rust-kzg-bn254 = { workspace = true }
ark-bn254 = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
tiny-keccak = { workspace = true }
ethabi = { workspace = true }
thiserror = { workspace = true }
ethereum-types = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
byteorder = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
hex-literal = { workspace = true }
backon = "0.4.4"

[dev-dependencies]
serial_test = { workspace = true }
