[package]
# This is named with the rust- prefix to match https://github.com/Layr-Labs/rust-kzg-bn254
# We will remove the prefix and publish as new crates once we combine all of these repos
# and move them into the eigenda monorepo.
name = "rust-eigenda-v2-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Layr-Labs/eigenda-client-rs"
description = "EigenDA Client"
license = "MIT OR Apache-2.0"
exclude = [
    # Excluded because g1.point is 32MiB and max crates.io package size is 10MiB.
    # Users should download the SRS points themselves from the repo or elsewhere.
    "../../resources/*",
]

[dependencies]
rand = { workspace = true }
bytes = { workspace = true}
reqwest = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
byteorder = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
hex-literal = { workspace = true }
ethabi = { workspace = true }
thiserror = { workspace = true }
ethereum-types = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tiny-keccak = { workspace = true }
tokio-stream = { workspace = true }
ark-bn254 = { workspace = true }
secp256k1 = { workspace = true}
rust-kzg-bn254-primitives = { workspace = true }
rust-kzg-bn254-verifier = { workspace = true }
rust-kzg-bn254-prover = { workspace = true }
ark-poly = { workspace = true }
proptest = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-ec = { workspace = true }
sha2 = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-contract = {workspace = true}
alloy = {workspace = true}

[dev-dependencies]
dotenv = { workspace = true }
serial_test = { workspace = true }
